@@ -17,10 +17,6 @@ import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.*;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.client.extensions.common.IClientItemExtensions;
-import net.minecraftforge.registries.ForgeRegistries;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -29,166 +25,139 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Consumer;
-
-public abstract class Jetpack extends ArmorItem {
-	String texture = "dif:textures/models/armor/jetpack.png";
-
-	public Jetpack(ArmorItem.Type type, Item.Properties properties) {
-		super(new ArmorMaterial() {
+public abstract class Jetpack extends ArmorItem{
+	String texture="dif:textures/models/armor/jetpack.png";
+	public Jetpack(ArmorItem.Type type,Item.Properties properties){
+		super(new ArmorMaterial(){
 			@Override
-			public int getDurabilityForType(@NotNull ArmorItem.Type type) {
-				return new int[]{0, 2, 0, 0}[type.getSlot().getIndex()] * 37;
+			public int getDurabilityForType(@NotNull ArmorItem.Type type){
+				return new int[]{0,2,0,0}[type.getSlot().getIndex()]*37;
 			}
-
 			@Override
-			public int getDefenseForType(@NotNull ArmorItem.Type type) {
-				return new int[]{0, 2, 0, 0}[type.getSlot().getIndex()];
+			public int getDefenseForType(@NotNull ArmorItem.Type type){
+				return new int[]{0,2,0,0}[type.getSlot().getIndex()];
 			}
-
 			@Override
-			public int getEnchantmentValue() {
+			public int getEnchantmentValue(){
 				return 0;
 			}
-
 			@Override
-			public @NotNull SoundEvent getEquipSound() {
+			public @NotNull SoundEvent getEquipSound(){
 				return Objects.requireNonNull(ForgeRegistries.SOUND_EVENTS.getValue(
-						ResourceLocation.fromNamespaceAndPath("minecraft", "item.armor.equip_iron")));
+						ResourceLocation.fromNamespaceAndPath("minecraft","item.armor.equip_iron")));
 			}
-
 			@Override
-			public @NotNull Ingredient getRepairIngredient() {
+			public @NotNull Ingredient getRepairIngredient(){
 				return Ingredient.of();
 			}
-
 			@Override
-			public @NotNull String getName() {
+			public @NotNull String getName(){
 				return "jetpack";
 			}
-
 			@Override
-			public float getToughness() {
+			public float getToughness(){
 				return 2F;
 			}
-
 			@Override
-			public float getKnockbackResistance() {
+			public float getKnockbackResistance(){
 				return 0F;
 			}
-		}, type, properties);
+		},type,properties);
 	}
-
-	public static class Chestplate extends Jetpack {
-		public Chestplate() {
-			super(Type.CHESTPLATE, new Item.Properties().stacksTo(1));
+	public static class Chestplate extends Jetpack{
+		public Chestplate(){
+			super(Type.CHESTPLATE,new Item.Properties().stacksTo(1));
 		}
-
 		@Override
-		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-			consumer.accept(new IClientItemExtensions() {
+		public void initializeClient(Consumer<IClientItemExtensions> consumer){
+			consumer.accept(new IClientItemExtensions(){
 				@Override
 				@OnlyIn(Dist.CLIENT)
-				public @NotNull HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("body", new ModelJetpack(Minecraft.getInstance().getEntityModels().bakeLayer(ModelJetpack.LAYER_LOCATION)).Body,
-									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
-					armorModel.crouching = living.isShiftKeyDown();
-					armorModel.riding = defaultModel.riding;
-					armorModel.young = living.isBaby();
+				public @NotNull HumanoidModel getHumanoidArmorModel(LivingEntity living,ItemStack stack,EquipmentSlot slot,HumanoidModel defaultModel){
+					HumanoidModel armorModel=new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("body",new ModelJetpack(Minecraft.getInstance().getEntityModels().bakeLayer(ModelJetpack.LAYER_LOCATION)).Body,
+									"left_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"right_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"head",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"hat",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"right_leg",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"left_leg",new ModelPart(Collections.emptyList(),Collections.emptyMap()))));
+					armorModel.crouching=living.isShiftKeyDown();
+					armorModel.riding=defaultModel.riding;
+					armorModel.young=living.isBaby();
 					return armorModel;
 				}
 			});
 		}
-
 		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
+		public String getArmorTexture(ItemStack stack,Entity entity,EquipmentSlot slot,String type){
 			return texture;
 		}
-
-		public static int getMainFuel(ItemStack itemStack) {
-			if (!itemStack.hasTag() || !Objects.requireNonNull(itemStack.getTag()).contains("MainFuel")) return 0;
+		public static int getMainFuel(ItemStack itemStack){
+			if(!itemStack.hasTag()||!Objects.requireNonNull(itemStack.getTag()).contains("MainFuel")) return 0;
 			return itemStack.getTag().getInt("MainFuel");
 		}
-
-		public static void setMainFuel(ItemStack itemStack, int value) {
-			if (itemStack.getTag() == null) {
+		public static void setMainFuel(ItemStack itemStack,int value){
+			if(itemStack.getTag()==null){
 				itemStack.setTag(new net.minecraft.nbt.CompoundTag());
 			}
-			itemStack.getTag().putInt("MainFuel", value);
+			itemStack.getTag().putInt("MainFuel",value);
 		}
-
-		public static int getThrustFuel(ItemStack itemStack) {
-			if (!itemStack.hasTag() || !Objects.requireNonNull(itemStack.getTag()).contains("ThrustFuel")) return 0;
+		public static int getThrustFuel(ItemStack itemStack){
+			if(!itemStack.hasTag()||!Objects.requireNonNull(itemStack.getTag()).contains("ThrustFuel")) return 0;
 			return itemStack.getTag().getInt("ThrustFuel");
 		}
-
-		public static void setThrustFuel(ItemStack itemStack, int value) {
-			if (itemStack.getTag() == null) {
+		public static void setThrustFuel(ItemStack itemStack,int value){
+			if(itemStack.getTag()==null){
 				itemStack.setTag(new net.minecraft.nbt.CompoundTag());
 			}
-			itemStack.getTag().putInt("ThrustFuel", value);
+			itemStack.getTag().putInt("ThrustFuel",value);
 		}
-
-		public static boolean getTurbo(ItemStack itemStack) {
-			if (!itemStack.hasTag() || !Objects.requireNonNull(itemStack.getTag()).contains("Turbo")) return false;
+		public static boolean getTurbo(ItemStack itemStack){
+			if(!itemStack.hasTag()||!Objects.requireNonNull(itemStack.getTag()).contains("Turbo")) return false;
 			return itemStack.getTag().getBoolean("Turbo");
 		}
-
-		public static void setTurbo(ItemStack itemStack, boolean value) {
-			if (itemStack.getTag() == null) {
+		public static void setTurbo(ItemStack itemStack,boolean value){
+			if(itemStack.getTag()==null){
 				itemStack.setTag(new net.minecraft.nbt.CompoundTag());
 			}
-			itemStack.getTag().putBoolean("Turbo", value);
+			itemStack.getTag().putBoolean("Turbo",value);
 		}
-
 		@Override
-		public int getBarWidth(@NotNull ItemStack itemStack) {
-			return Math.round(13F * (float) getMainFuel(itemStack) / (float) DifModCommonConfig.jetpackMaxBasic);
+		public int getBarWidth(@NotNull ItemStack itemStack){
+			return Math.round(13F*(float)getMainFuel(itemStack)/(float)DifModCommonConfig.jetpackMaxBasic);
 		}
-
 		@Override
-		public int getBarColor(@NotNull ItemStack itemStack) {
-			float f = Math.max(0, (float) getMainFuel(itemStack) / (float) DifModCommonConfig.jetpackMaxBasic);
-			return Mth.hsvToRgb(f * 0.33F, 1F, 1F);
+		public int getBarColor(@NotNull ItemStack itemStack){
+			float f=Math.max(0,(float)getMainFuel(itemStack)/(float)DifModCommonConfig.jetpackMaxBasic);
+			return Mth.hsvToRgb(f*0.33F,1F,1F);
 		}
-
 		@Override
-		public void appendHoverText(@NotNull ItemStack itemStack, @Nullable Level world, @NotNull List<Component> list, @NotNull TooltipFlag flag) {
-			list.add(Component.literal("Main Storage: " + getMainFuel(itemStack) + " / " + DifModCommonConfig.jetpackMaxBasic).withStyle(ChatFormatting.GRAY));
-			list.add(Component.literal("Thrust Tank: " + getThrustFuel(itemStack) + " / " + (getTurbo(itemStack) ? DifModCommonConfig.jetpackMaxTurbo : DifModCommonConfig.jetpackMaxThrust)).withStyle(ChatFormatting.AQUA));
-			if (getTurbo(itemStack)) list.add(Component.literal("TURBO").withStyle(ChatFormatting.RED));
+		public void appendHoverText(@NotNull ItemStack itemStack,@Nullable Level world,@NotNull List<Component> list,@NotNull TooltipFlag flag){
+			list.add(Component.literal("Main Storage: "+getMainFuel(itemStack)+" / "+DifModCommonConfig.jetpackMaxBasic).withStyle(ChatFormatting.GRAY));
+			list.add(Component.literal("Thrust Tank: "+getThrustFuel(itemStack)+" / "+(getTurbo(itemStack)?DifModCommonConfig.jetpackMaxTurbo:DifModCommonConfig.jetpackMaxThrust)).withStyle(ChatFormatting.AQUA));
+			if(getTurbo(itemStack)) list.add(Component.literal("TURBO").withStyle(ChatFormatting.RED));
 		}
-
-		public static boolean isFuel(ItemStack itemStack) {
+		public static boolean isFuel(ItemStack itemStack){
 			return itemStack.getItem().equals(DifModItems.JETPACK_FUEL.get());
 		}
-
-		public static boolean isTurboFuel(ItemStack itemStack) {
+		public static boolean isTurboFuel(ItemStack itemStack){
 			return itemStack.getItem().equals(DifModItems.JETPACK_TURBO_FUEL.get());
 		}
-
 		@Override
-		public boolean isEnchantable(@NotNull ItemStack itemStack) {
+		public boolean isEnchantable(@NotNull ItemStack itemStack){
 			return false;
 		}
-
 		@Override
-		public boolean isBookEnchantable(ItemStack itemStack, ItemStack book) {
+		public boolean isBookEnchantable(ItemStack itemStack,ItemStack book){
 			return false;
 		}
-
 		@Override
-		public boolean shouldCauseReequipAnimation(ItemStack oldStack, ItemStack newStack, boolean slotChanged) {
-			return slotChanged || oldStack.getItem() != newStack.getItem();
+		public boolean shouldCauseReequipAnimation(ItemStack oldStack,ItemStack newStack,boolean slotChanged){
+			return slotChanged||oldStack.getItem()!=newStack.getItem();
 		}
-
 		@Override
-		public boolean isBarVisible(@NotNull ItemStack itemStack) {
+		public boolean isBarVisible(@NotNull ItemStack itemStack){
 			return true;
 		}
 	}
